<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addGuestLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddGuestFragment">

        <!-- Definicja elementów interfejsu użytkownika -->
        <!-- Etykieta i pole wejściowe dla nazwy gościa -->
        <TextView
            android:id="@+id/guestNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/guestNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guestNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/enter_guest_name"
            android:inputType="textPersonName" />

        <!-- Definicje dla wieku i adresu gościa -->
        <EditText
            android:id="@+id/guestAgeInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guestNameInput"
            app:layout_constraintTop_toBottomOf="@+id/guestNameInput"
            app:layout_constraintEnd_toEndOf="@+id/guestNameInput"
            android:hint="@string/enter_guest_age"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/guestAddressInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guestAgeInput"
            app:layout_constraintTop_toBottomOf="@+id/guestAgeInput"
            app:layout_constraintEnd_toEndOf="@+id/guestAgeInput"
            android:hint="@string/enter_guest_address"
            android:inputType="textPostalAddress" />

        <!-- Grupa RadioButton do wyboru kategorii -->
        <RadioGroup
            android:id="@+id/categoryGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/guestAddressInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/friend_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend" />

            <RadioButton
                android:id="@+id/family_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family" />

            <RadioButton
                android:id="@+id/companion_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companion" />
        </RadioGroup>

        <!-- Przycisk zapisu -->
        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@android:drawable/ic_menu_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
